--- a/lesson_5/css/fonts.css
+++ b/lesson_5/css/fonts.css
@@ -2,7 +2,7 @@
   font-family: "Roboto";
   src: url("../fonts/Roboto-Regular.woff2") format("woff2"),
     url("../fonts/Roboto-Regular.woff") format("woff");
-  display: swap;
+  font-display: swap;
   font-weight: 400;
   font-style: normal;
 }
@@ -11,7 +11,7 @@
   font-family: "Roboto";
   src: url("../fonts/Roboto-Medium.woff2") format("woff2"),
     url("../fonts/Roboto-Medium.woff") format("woff");
-  display: swap;
+  font-display: swap;
   font-weight: 500;
   font-style: normal;
 }
@@ -20,7 +20,7 @@
   font-family: "Roboto";
   src: url("../fonts/Roboto-Bold.woff2") format("woff2"),
     url("../fonts/Roboto-Bold.woff") format("woff");
-  display: swap;
+  font-display: swap;
   font-weight: 700;
   font-style: normal;
 }
