--- a/lesson_7/css/style.css
+++ b/lesson_7/css/style.css
@@ -44,18 +44,24 @@ body {
   margin-top: 100px;
 }
 
+.licencing .pretitle-box {
+  margin-bottom: 16px;
+  font-size: 0;
+}
+
 .licencing .decor {
   display: inline-block;
   width: 12px;
   height: 12px;
   background-color: #40ddb6;
+  margin-right: 6px;
 }
 
 .licencing .pretitle {
   display: inline-block;
+  font-size: 18px;
   color: #37393f;
   font-weight: 500;
-  margin-bottom: 16px;
 }
 
 .licencing .title,
@@ -124,8 +130,9 @@ body {
 
 .project .list li {
   margin-bottom: 30px;
-  text-indent: 35px;
+  padding-left: 35px;
   font-weight: 500;
+  line-height: 1.46;
 }
 
 /* =================== Task 3 =================== */
@@ -141,10 +148,11 @@ body {
 
 .clothing-header {
   margin-bottom: 30px;
+  font-size: 0;
 }
 
 .clothing .decor {
-  margin-left: -25px;
+  margin-left: -20px;
   vertical-align: top;
   width: 6px;
   height: 28px;
