--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -24,18 +24,23 @@
   font-size: 18px;
 }
 
+.header--margin {
+  margin-bottom: 80px;
+}
+
 .header__container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  gap: 30px;
   min-height: 111px;
 }
 
-.header__logo:not(:last-child) {
-  margin-right: 164px;
-}
-
-.header__search:not(:last-child) {
-  margin-right: 20px;
+.header__box {
+  display: flex;
+  flex: 0 1 calc((440 / 1240) * 100%);
+  justify-content: space-between;
+  gap: 30px;
 }
 
 .search {
@@ -60,9 +65,11 @@
 }
 
 .header__auth {
-  margin-left: auto;
+  flex: 0 1 calc((595 / 1240) * 100%);
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  gap: 30px;
   line-height: 1.2;
 }
 
@@ -73,10 +80,6 @@
   position: relative;
   padding-right: 29px;
   cursor: pointer;
-}
-
-.header__lang:not(:last-child) {
-  margin-right: 67px;
 }
 
 .header__lang::after {
@@ -122,8 +125,10 @@
   text-decoration: underline;
 }
 
-.header__login:not(:last-child) {
-  margin-right: 29px;
+.header__buttons {
+  display: flex;
+  gap: 29px;
+  align-items: center;
 }
 
 .login {
@@ -153,7 +158,7 @@
 }
 
 .categories {
-  padding: 100px 0;
+  margin-bottom: 80px;
 }
 
 .categories__title {
@@ -252,7 +257,7 @@
 }
 
 .wishlist {
-  padding: 100px 0;
+  margin-bottom: 80px;
 }
 
 .wishlist__container {
@@ -301,6 +306,7 @@
 
 .item-wishlist__image-link {
   flex: 0 0 110px;
+  width: 110px;
   height: 110px;
   border-radius: 4px;
   overflow: hidden;
@@ -317,15 +323,16 @@
 }
 
 .item-wishlist__text {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
   color: #3c4242;
   font-family: "Causten", sans-serif;
   font-size: 22px;
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.44px;
+}
+
+.item-wishlist__text > *:not(:last-child) {
+  margin-bottom: 12px;
 }
 
 .item-wishlist__title:hover a {
@@ -364,7 +371,7 @@
 }
 
 .orders {
-  padding: 50px 0;
+  margin-bottom: 50px;
 }
 
 .orders__container {
