--- a/lesson_26/scss/style.scss
+++ b/lesson_26/scss/style.scss
@@ -22,14 +22,15 @@ body {
 
 .list {
 	padding: toRem(30) toRem(15);
+	display: flex;
+	flex-direction: column;
+	gap: toRem(15);
+	align-items: flex-start;
 }
 
 .item {
 	font-size: toRem(25);
 	cursor: pointer;
-	&:not(:last-child) {
-		margin-bottom: toRem(10);
-	}
 }
 
 div.item {
