--- a/lesson_26/css/style.css
+++ b/lesson_26/css/style.css
@@ -101,14 +101,22 @@ body.loaded {
 
 .list {
   padding: 1.875rem 0.9375rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.9375rem;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .item {
   font-size: 1.5625rem;
   cursor: pointer;
-}
-.item:not(:last-child) {
-  margin-bottom: 0.625rem;
 }
 
 div.item {
